package PayrollDomain;

/**
 * Created by k2works on 2017/04/06.
 */
public interface PaymentMethod {
    void Pay(Paycheck pc);
}
